--- a/css/style.css
+++ b/css/style.css
@@ -141,7 +141,7 @@ html, body {
   font-size: 30px;
 }
 
-@media (max-width: 480px) {
+@media (max-width: 480px) and (max-width: 780px) {
   .goals {
     flex-direction: column;
     padding: 0 10px;
