--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,7 @@ html, body {
 .introduction-text {
   height: 83vh;
   width: 60%;
+  max-width: 1220px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -89,6 +90,7 @@ html, body {
 
 .introduction-img {
   display: flex;
+  max-width: fit-content;
   justify-self: start;
 }
 
@@ -154,6 +156,21 @@ html, body {
 
   .goals::before, .goals::after {
     display: none;
+  }
+}
+
+@media (min-width: 1028px) and (min-height: 700px) {
+  .goals::before, .goals::after {
+    display: none;
+  }
+
+  .introduction-img {
+    width: 300px;
+    height: 300px;
+    display: inline-block;
+    margin-top: 100px;
+    border: 1px solid var(--main-bg-color);
+    border-radius: 50%;
   }
 }
 
@@ -305,4 +322,115 @@ footer p {
     text-align: center;
     margin-bottom: 10px;
   }
+}
+
+/* Auth page */
+.auth {
+  width: 70vw;
+  height: auto;
+  margin: auto;
+}
+
+.toggle {
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.toggle-button {
+  font-size: 20px;
+  font-weight: 400;
+  padding: 10px;
+  width: 200px;
+  margin-left: 5px;
+  color: var(--text-color-light);
+  background-color: var(--main-bg-color);
+  outline: none;
+  border: none;
+  border-radius: 3px;
+}
+
+.toggle-button:hover {
+  background-color: hsl(350, 72%, 65%);
+}
+
+.form-wrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.form-container {
+  padding: 30px;
+}
+
+.form-container div {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
+  margin: auto 0;
+}
+
+.form-container input {
+  padding: 10px;
+  margin: 5px;
+}
+
+.calculator{
+  width: 50vw;
+  height: 100vh;
+  margin: 0 auto;
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: center;
+  align-items: center;
+}
+
+.calculator-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  border: 2px solid var(--main-bg-color);
+  border-radius: 10px;
+  padding: 10px;
+}
+
+.calculator-container div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.calculator-container span {
+  width: 10px;
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  cursor: pointer;
+  border: 1px solid rgba(54, 54, 97, 0.39);
+  margin: 5px;
+  border-radius: 5px;
+}
+
+.zero {
+  width: 50px !important;
+}
+
+.calculator-redirect {
+  position: fixed;
+  bottom: 30px;
+  right: 20px;
+  text-decoration: none;
+  color: var(--text-color-light);
+  width: auto;
+  padding: 8px;
+  background-color: hsl(174, 34%, 40%);
+  border-radius: 10px;
+}
+
+.calculator-redirect:hover {
+  background-color: var(--text-color-light);
+  color: var(--text-color-dark);
+  border: 1px solid var(--main-bg-color);
+  transition: 0.5s all ease-in-out;
 }
